2005-09-25 14:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.m: Additional correct in 
	setCurrentInspector:

2005-09-25 12:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormInspectorPanel.gorm: Set resize options correctly.
	* GormCore/GormConnectionInspector.m: [GormConnectionInspector init]
	modified size of ok/revert buttons.
	* GormCore/GormDocument.m: Pull the archive type in 
	[GormDocument saveGormDocument:]
	* GormCore/GormInspectorsManager.m: in setCurrentInspector: 
	corrected issues with inspector resizing.

2005-09-15 00:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.[mh]: Added origFrame to allow
	resetting the inspectorView frame to it's original size in 
	setCurrentInspector:.
	* GormCore/GormPalettesManager.m: Removed old commented out code
	in init.

2005-09-12 22:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Copy the .gorm file into the Resources.
	* GormCore/GormInspectorsManager.h: Use the inspector panel gorm.
	* GormCore/GormInspectorsManager.m: Use the inspector panel gorm.
	* English.lproj/GormInspectorPanel.gorm: corrects bug#13767.
	* English.lproj/GormDummyInspector.gorm: corrects bug#13767.
	
2005-09-04 10:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/4Data/GormNSComboBoxAttributesInspector.m: In ok:
	performs a revert to show any changes which were made
	automatically as a result of other changes.

2005-09-04 10:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormWindowAttributesInspector.m
	* Palettes/1Windows/GormWindowSizeInspector.m
	* Palettes/2Controls/GormBoxAttributesInspector.m
	* Palettes/2Controls/GormColorWellAttributesInspector.m
	* Palettes/2Controls/GormMatrixAttributesInspector.m
	* Palettes/2Controls/GormNSTextFieldInspector.gorm
	* Palettes/2Controls/GormTextFieldAttributesInspector.m