@@ -1,3 +1,10 @@
+2005-09-29 19:38 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormConnectionInspector.m: Corrected resizing attributes in
+	the GormInspectorManager setCurrentInspector: method.
+	* GormCore/GormInspectorsManager.m: Corrected resizing attributes for
+	connect and revert buttons in init.
+
 2005-09-25 14:40 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormInspectorsManager.m: Additional correct in 
